--- a/profiles.yml
+++ b/profiles.yml
@@ -5,6 +5,6 @@ default:
       type: databricks
       catalog: main
       schema: "{{ env_var('DBT_SCHEMA', 'dbt_' ~ env_var('USER', 'live')) }}"
-      host: "{{ env_var('DBSQLCLI_HOST_NAME') }}"
-      http_path: "{{ env_var('DBSQLCLI_HTTP_PATH') }}"
-      token: "{{ env_var('DATABRICKS_AAD_TOKEN') }}"
+      host: "{{ env_var('DBSQLCLI_HOST_NAME', 'adb-1702423662835851.11.azuredatabricks.net') }}"
+      http_path: "{{ env_var('DBSQLCLI_HTTP_PATH', '/sql/1.0/warehouses/66247af347671661') }}"
+      token: "{{ env_var('DATABRICKS_AAD_TOKEN', env_var('DBT_ACCESS_TOKEN', '')) }}"
